--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-geolocated": "^2.3.0",
+    "react-responsive": "^4.1.0",
     "react-scripts": "1.1.1"
   },
   "scripts": {
